@@ -2,6 +2,7 @@ dracut-011
 ==========
 - use udev-168 features for shutting down udev
 - introduce "--prefix" to put all initramfs files in /run/initramfs
+- new shutdown script
 
 dracut-010
 ==========
